# signal-extract

./: .env.example  .gitignore  ARCHITECTURE.md  main.py  models.py  pyproject.toml
api/: server.py
collectors/: __init__.py  base.py  github.py  github_discussions.py  hackernews.py  nvd.py  rss.py
config/: settings.py
delivery/: __init__.py  output.py
docs/: _config.yml  architecture.md  hld.md  index.md  lld.md
filters/: __init__.py  scorer.py
llm/: __init__.py  claude_provider.py  factory.py  openai_provider.py  openrouter_provider.py  provider.py
qa/: __init__.py  handler.py
storage/: __init__.py  db.py
synthesizer/: __init__.py  engine.py  prompts.py
tests/: test_opportunities.py
web/: index.html  vite.config.js
web/src/: App.css  App.jsx  api.js
web/src/components/: DigestDetail.jsx  DigestList.jsx  Filters.jsx  ItemsTable.jsx  OpportunitiesView.jsx  OpportunityDetail.jsx  StatsPanel.jsx
